2009-05-18  Darren Kenny  <darren.kenny@sun.com>

	* Makefile.am, autogen.sh, configure.in, help/Makefile.am,
	  help/nwam-manager.omf.in, help/nwam-manager.xml,
	  help/C/graphics/condition-location.png,
	  help/C/graphics/connection-properties-ipv4.png,
	  help/C/graphics/connection-properties-wireless.png,
	  help/C/graphics/connection-status.png,
	  help/C/graphics/locationprefs-dialog.png,
	  help/C/graphics/manual-location.png,
	  help/C/graphics/nwprofile-auto.png,
	  help/C/graphics/nwprofile-user.png,
	  help/C/graphics/nwstatus-context-menu.png,
	  help/C/graphics/panel-all-disconnect.png,
	  help/C/graphics/panel-some-disconnect.png,
	  help/C/graphics/panel-wired-connect.png,
	  help/C/graphics/panel-wireless-connect.png,
	  help/C/graphics/system-location.png, help/C/graphics/vpn-dialog.png,
	  help/C/graphics/wireless-chooser.png, help/C/nwam-manager.xml:
	  Integrate final OLH document, still needs to be linked to UI.

2009-05-18  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c:
	* capplet/capplet-utils.h:
	* capplet/nwam_net_conf_panel.c (refresh),
	(nwam_net_conf_update_status_cell_cb),
	(capplet_tree_store_cp_children), (on_button_clicked),
	(ncu_pri_group_get_path), (ncu_pri_group_get_iter),
	(ncu_pri_treeview_add):
	New group is partially done.
	TODO, group id is increasing infinitely.

2009-05-18  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_tree_store_move_children):
	* capplet/capplet-utils.h:
	* capplet/nwam_net_conf_panel.c (nwam_compose_tree_view),
	(nwam_net_conf_panel_init), (refresh),
	(nwam_net_conf_panel_finalize),
	(nwam_net_conf_update_status_cell_cb), (on_button_clicked),
	(selection_func), (update_widgets), (create_group_object),
	(update_ncu_like_group), (ncu_pri_group_get_index),
	(ncu_pri_group_find_iter_gt), (ncu_pri_group_get_iter),
	(ncu_pri_treeview_add):
	* common/nwamui_ip.c (nwamui_ip_get_property):
	Merged, correct update_widgets, but not sure if move up/down could 
	allows mixed grup/ncus.
